# abcc-driver-api

./: .gitignore  CMakeLists.txt
.github/workflows/: ci.yml  release.yml
cmake/: GenerateBuildInfo.cmake
inc/: build_info_fallback.h  project_version.h  version.h
scripts/: gen_build_info.sh
src/: main.c
